# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: .gitignore.  cli.py  consts.py  engine.py  utils.py
brain_games/games/: brain_calc.py  brain_prime.py  brain_progression.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression  brain_progression.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
hexlet-code/: pyproject.toml
hexlet-code/scripts/games/: brain_prime.py
